# rustlesnake

./: Cargo.toml  gdb.bat
src/: main.rs  randomizer.rs
src/renderer/: control_alignment.rs  control_layout.rs  ext_lcd.rs  mod.rs  rectangle.rs  renderer.rs  segment.rs  seven_segment.rs
src/snake/: colors.rs  direction.rs  game.rs  grid.rs  mod.rs  move_direction.rs  position.rs  snake.rs  tile.rs  tile_coord.rs  tile_element.rs
