[package]
name = "rustlesnake"
version = "0.1.0"
authors = ["c0deba5e <c0deba5e@users.noreply.github.com>", "tkegelmann <tkegelmann@users.noreply.github.com>"]

[[bin]]
doc = false
name = "rustlesnake"

[dependencies]
cortex-m = "0.1.4 "
r0 = "0.1.0"

[dependencies.stm32f7_discovery]
git="https://github.com/embed-rs/stm32f7-discovery"
version="0.1.0"

[profile]

[profile.release]
lto = true
debug = true
